# Progtomata

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxyfile  Makefile  README.md  li.json  platformio.ini  stm32f407vg.ld  stm32f407vg_flash.ld  til.json
.github/workflows/: platform.yml
cmake/: toolchain-arm-none-eabi.cmake  toolchain-host.cmake
config/: FreeRTOSConfig.h  tband_config.h  triceConfig.h  triceUart.h
include/: audio_manager.h  core.h  hooks.h  interface.h  lcd.h  oled.h  progtomata_system.h  stm32f4_discovery.h  tasks.h  trace.h
lib/: CMakeLists.txt  library.json
lib/AudioCodec/stm32f4_discovery_audio_codec/: library.json  stm32f4_discovery_audio_codec.c  stm32f4_discovery_audio_codec.h
lib/audio_codec/: CMakeLists.txt  library.json  stm32f4_discovery_audio_codec.c  stm32f4_discovery_audio_codec.h
lib/drivers/UART/: CMakeLists.txt  library.json  uart_driver.c  uart_driver.h
lib/framework_stm/: CMakeLists.txt  library.json
lib/framework_stm/cmsis/stm32f4/: stm32f4xx.h  system_stm32f4xx.c
lib/soundBank/: fxTom.h  hihat.h  kick.h  kick_22050_mono.h  kick_22050hz.h  kick_44100_stereo.h  library.json  openhat_22050_mono.h  openhat_22050hz.h  snare.h
lib/sound_bank/: CMakeLists.txt  kick_22050_mono.h  kick_aether.h  library.json  openhat_22050_mono.h
lib/trice/src/: triceUart.c
scripts/: setFlags.py
src/: CMakeLists.txt  audio_manager.c  hooks.c  interface.c  lcd.c  main.c  oled.c  stm32f4_discovery.c  system_config.c  tband_port.c  trace.c  triceUart.c
test/: CMakeLists.txt  syscalls_min.c  test_main.c  unity_config.c  unity_config.h
test/mock/: system_mock.c
test/mocks/: system_mock.c
tests/: CMakeLists.txt  syscalls_min.c
tests/mock/: system_mock.c
tests/unit_tests/: CMakeLists.txt  test_main.c
wizardry/: display_gif.py  generateGIF.py  pin_defs.xlsx
